2003-01-08  Dani Carbonell  <bocata@panete.net>

	* TODO: remove composed characters problem.
	* src/fields.c: rewrite fields messages entry box, so it works ok
	with composed characters.
	* src/gtetrinet.c: acomodate fields messages changes.
	* src/tetrinet.c: remove fields messages code, moved to fields.c.

2003-01-08  Jordi Mallach  <jordi@sindominio.net>

	* src/misc.c (nocolor): fix previous change.

2003-01-07  Jordi Mallach  <jordi@sindominio.net>

	* src/misc.c (nocolor): don't assume signedness of char.

2003-01-07  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: updated for 0.5.2.
	* TODO: updated.

	* src/config.c (config_loadconfig): fix a gcc-3.2 warning.

2003-01-07  Jordi Mallach  <jordi@sindominio.net>

	* src/client.c: supress compile warnings.
	* src/commands.c: likewise.
	* src/dialogs.c: likewise.
	* src/fields.c: likewise.
	* src/gtetrinet.c: likewise.
	* src/misc.c: likewise.
	* src/partyline.c: likewise.
	* src/sound.c: likewise.
	* src/tetrinet.c: likewise.
	* src/tetris.c: likewise.

	* src/*.c: update dates in copyright notices.

2003-01-07  Dani Carbonell  <bocata@panete.net>

	* dialogs.c (teamdialog_new): complete rewrite of this dialog, so it
	is now HIG compliant.
	(prefdialog_new): added spacing between buttons.
	(connectdialog_new): likewise.
	(connectdialog_button): check if user has specified a servername, a
	nickname and a spectator password before trying to connect.
	(key_dialog_callback): converted the key stroke to upper case.

	* tetrinet.c (tetrinet_key): now it converts all keystrokes to upper
	case.

	* config.c (config_loadconfig): likewise

2003-01-06  Jordi Mallach  <jordi@sindominio.net>

	* configure.in (AC_OUTPUT): add gtetrient.desktop.

2003-01-06  Jordi Mallach  <jordi@sindominio.net>

	* Makefile.am: add intltool support.
	* configure.in: likewise.
	* gtetrinet.desktop.in: new, generated from gtetrinet.desktop.

	* ABOUT-NLS: upgraded to gettext 0.11.5.
	* config.rpath: likewise.
